niro/src/test/resources/negative/form-form.ql
form form {
    "This should not be legal" illegal: boolean
}